# AudioVisualizerSFML

./: CMakeLists.txt  README.md  main.cpp
src/Header/: AudioVisualizer.h  SettingsPanel.h  SongPanel.h
src/source_code/: AudioVisualizer.cpp  SettingsPanel.cpp  SongPanel.cpp
